[tool.poetry]
name = "catchment_data_api"
version = "0.1.0"
description = "API for retrieval of catchment data for land cover and livestock"
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
sqlalchemy = "^1.4.0"
pyyaml = "^5.4" 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
